Fix background image jumping on scroll in mobile view
On scroll the url bar in the mobile view disappears leaving a white space.
Instantly, the background image is resized creating an unpleasant jump for the user.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,10 +17,29 @@
     font-style: normal;
 }
 
-main {
-    min-height: 100vh;
+/* Fix for full page fixed background jump on scrolling because of the url bar on mobile */
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+    transform: scale(1.0);
+}
+
+.bg:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: url("../assets/restaurant.jpg") no-repeat center/cover;
-    background-attachment: fixed;
+}
+
+main {
     padding: 2rem;
     font-family: 'Macaw', Georgia, 'Times New Roman', Times, serif;
     letter-spacing: 2px;
